# ims-svcs-dev

./: Dockerfile  README.md  WORKSPACE  requirements.bzl
.github/workflows/: build-and-push-docker-image.yml
apps/flask-app/: BUILD.bazel  main.py
bzl/requirements/: BUILD.bazel  requirements.in
